--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,7 +1,7 @@
 <!-- Describe task in general -->
 
 <p style="text-align: justify;">
-    Function is a block of code, that may be used multiple times in different places. Usually function gets some input data (parameters), make some operations with them and returns some value outside.  
+    Keeping in memory your knowledge about variables and operations with them let's make a step aside and talk about functions. Function is a block of code, that may be used multiple times in different places. Usually function gets some input data (parameters), make some operations with them and returns some value outside.  
 </p>
 
 <p>
