--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,11 +5,11 @@
 </p>
 
 <p>
-    In this mission you need to define a function <code>function</code>, which takes no arguments:
+    In this mission you need to define a function <code>func</code>, which takes no arguments:
 </p>
 
 <pre>
-    def function():
+    def func():
 </pre>
 
 <p style="text-align: justify;">
@@ -17,7 +17,7 @@
 </p>
 
 <pre>
-    def function():
+    def func():
 
         pass
 </pre>
@@ -25,7 +25,7 @@
     or
 </p>
 <pre>
-    def function():
+    def func():
 
         ...
 </pre>
@@ -34,7 +34,7 @@
 </p>
 
 <pre>
-    def function():
+    def func():
 
         return None
 </pre>
