--- a/info/task_description.html
+++ b/info/task_description.html
@@ -5,39 +5,16 @@
 </p>
 
 <p>
-    In this mission you need to define a function <code>func</code>, which takes no arguments:
+    1. In this mission you need to define a function <code>func</code>, which takes no arguments.
 </p>
-
-<pre>
-    def func():
-</pre>
 
 <p style="text-align: justify;">
-    Your function is also not going to do anything! To keep a code (expression) working correctly without doing anything you need to use so called placeholders: keyword <code>pass</code> or <code>...</code> operator. 
+    2. Your function is also not going to do anything! To keep a code (expression) working correctly without doing anything you need to use so called placeholders: keyword <code>pass</code> or <code>...</code> operator. 
 </p>
 
-<pre>
-    def func():
-
-        pass
-</pre>
 <p>
-    or
+    3. Note that even if a function returns nothing, it returns the empty value <code>None</code> anyway.
 </p>
-<pre>
-    def func():
-
-        ...
-</pre>
-<p>
-    Note that even if a function returns nothing, it returns the empty value <code>None</code> anyway. So, above two variants of code equals the following one.
-</p>
-
-<pre>
-    def func():
-
-        return None
-</pre>
 
 <!-- <p style="text-align: center;">
     <img  title="example" src="{{MEDIA}}example.png" alt="example" style="max-height: 83px"/>
